<!--
SPDX-FileCopyrightText: © 2025 Sysand contributors <opensource@sensmetry.com>

SPDX-License-Identifier: MIT OR Apache-2.0
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.sensmetry</groupId>
  <artifactId>sysandTests</artifactId>
  <version>VERSION</version>
  <description>Java Sysand Tests</description>
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <profiles>
    <!-- maven.compiler.release is only available in Java 9+, but it is required
    to disallow usage of Java >8 APIs when building with Java >8 -->
    <profile>
      <id>java-8-api</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <maven.compiler.release>8</maven.compiler.release>
      </properties>
    </profile>
  </profiles>
  <repositories>
    <repository>
      <!-- local repository (autoupdated) -->
      <id>local-maven-repo</id>
      <url>file:///${project.basedir}/local-maven-repo</url>
    </repository>
  </repositories>
  <dependencies>

    <!-- local-maven-repo -->
    <dependency>
      <groupId>com.sensmetry</groupId>
      <artifactId>sysand</artifactId>
      <version>VERSION</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>6.0.2</version>
      <scope>test</scope>
    </dependency>

  </dependencies>
  <build>
    <plugins>
      <plugin>
        <!-- test runner -->
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.4</version>
        <configuration>
          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <!-- Format with Spotless-->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.43.0</version>
        <configuration>
          <java>
            <googleJavaFormat>
              <version>1.22.0</version>
            </googleJavaFormat>
          </java>
          <formats>
            <format>
              <includes>
                <include>**/*.xml</include>
              </includes>
              <eclipseWtp>
                <type>XML</type>
              </eclipseWtp>
            </format>
          </formats>
        </configuration>
        <executions>
          <execution>
            <id>spotless-check</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- Lint with Checkstyle -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.6.0</version>
        <!-- override to 13.1.0 so google_checks-style config works -->
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>13.1.0</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>${project.basedir}/../checkstyle.xml</configLocation>
          <encoding>${project.build.sourceEncoding}</encoding>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
        </configuration>
        <executions>
          <execution>
            <id>checkstyle</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
